src/test/resources/syntactic/tests/error/TC_ERROR_CONSTRUCTOR.ru
/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 9 | COLUMNA 6 | SE ESPERABA: ( Y SE ENCONTRO: { |
struct A:B{

}

impl A{
    .{} /? un constructor lleva parentesis y luego llaves .(){}
}